; ModuleID = '/home/carl/AnghaBench/freebsd/tests/sys/kqueue/libkqueue/extr_timer.c_test_periodic.c'
source_filename = "/home/carl/AnghaBench/freebsd/tests/sys/kqueue/libkqueue/extr_timer.c_test_periodic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kevent = type { i32, i32 }

@.str = private unnamed_addr constant [31 x i8] c"kevent(EVFILT_TIMER, periodic)\00", align 1
@vnode_fd = common dso_local global i32 0, align 4
@EVFILT_TIMER = common dso_local global i32 0, align 4
@EV_ADD = common dso_local global i32 0, align 4
@kqfd = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@EV_CLEAR = common dso_local global i32 0, align 4
@EV_DELETE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_periodic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_periodic() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.kevent, align 4
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  %3 = load i8*, i8** %1, align 8
  %4 = call i32 @test_begin(i8* %3)
  %5 = call i32 (...) @test_no_kevents()
  %6 = load i32, i32* @vnode_fd, align 4
  %7 = load i32, i32* @EVFILT_TIMER, align 4
  %8 = load i32, i32* @EV_ADD, align 4
  %9 = call i32 @EV_SET(%struct.kevent* %2, i32 %6, i32 %7, i32 %8, i32 0, i32 1000, i32* null)
  %10 = load i32, i32* @kqfd, align 4
  %11 = call i64 @kevent(i32 %10, %struct.kevent* %2, i32 1, i32* null, i32 0, i32* null)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %0
  %14 = load i8*, i8** %1, align 8
  %15 = call i32 @err(i32 1, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %14)
  br label %16

16:                                               ; preds = %13, %0
  %17 = load i32, i32* @EV_ADD, align 4
  %18 = load i32, i32* @EV_CLEAR, align 4
  %19 = or i32 %17, %18
  %20 = getelementptr inbounds %struct.kevent, %struct.kevent* %2, i32 0, i32 0
  store i32 %19, i32* %20, align 4
  %21 = getelementptr inbounds %struct.kevent, %struct.kevent* %2, i32 0, i32 1
  store i32 1, i32* %21, align 4
  %22 = load i32, i32* @kqfd, align 4
  %23 = call i32 @kevent_get(i32 %22)
  %24 = call i32 @kevent_cmp(%struct.kevent* %2, i32 %23)
  %25 = call i32 @sleep(i32 1)
  %26 = load i32, i32* @kqfd, align 4
  %27 = call i32 @kevent_get(i32 %26)
  %28 = call i32 @kevent_cmp(%struct.kevent* %2, i32 %27)
  %29 = load i32, i32* @EV_DELETE, align 4
  %30 = getelementptr inbounds %struct.kevent, %struct.kevent* %2, i32 0, i32 0
  store i32 %29, i32* %30, align 4
  %31 = load i32, i32* @kqfd, align 4
  %32 = call i64 @kevent(i32 %31, %struct.kevent* %2, i32 1, i32* null, i32 0, i32* null)
  %33 = icmp slt i64 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %16
  %35 = load i8*, i8** %1, align 8
  %36 = call i32 @err(i32 1, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %35)
  br label %37

37:                                               ; preds = %34, %16
  %38 = call i32 (...) @success()
  ret void
}

declare dso_local i32 @test_begin(i8*) #1

declare dso_local i32 @test_no_kevents(...) #1

declare dso_local i32 @EV_SET(%struct.kevent*, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i64 @kevent(i32, %struct.kevent*, i32, i32*, i32, i32*) #1

declare dso_local i32 @err(i32, i8*, i8*) #1

declare dso_local i32 @kevent_cmp(%struct.kevent*, i32) #1

declare dso_local i32 @kevent_get(i32) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @success(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
